changed some tools and added dark-light

--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -16,8 +16,8 @@
         android:layout_marginRight="@dimen/_16sdp"
         android:fontFamily="@font/sf_pro_text"
         android:text="Bookmarks"
-        android:textColor="#333647"
-        android:textSize="@dimen/_18sdp"
+        android:textColor="@color/title_text_color"
+        android:textSize="@dimen/_18ssp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,8 +29,8 @@
         android:layout_marginTop="@dimen/_8sdp"
         android:fontFamily="@font/sf_pro_text"
         android:text="Saved articles to the library"
-        android:textColor="#7C82A1"
-        android:textSize="@dimen/_12sdp"
+        android:textColor="@color/mini_text_color"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintLeft_toLeftOf="@id/title"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
@@ -72,7 +72,7 @@
         android:fontFamily="@font/sf_pro_text"
         android:text="You haven't saved any articles"
         android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintBottom_toTopOf="@id/text_2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -86,7 +86,7 @@
         android:fontFamily="@font/sf_pro_text"
         android:text="yet. Start reading and"
         android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintBottom_toTopOf="@id/text_3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -100,7 +100,7 @@
         android:fontFamily="@font/sf_pro_text"
         android:text="bookmarking them now"
         android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_12ssp"
         app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
