--- a/app/src/main/res/color/bottom_nav_color.xml
+++ b/app/src/main/res/color/bottom_nav_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true" android:color="@color/nuntium_color" />
-    <item android:state_checked="false" android:color="#ACAFC3"/>
+    <item android:state_checked="false" android:color="@color/bottom_nav_color_false"/>
 </selector>
