--- a/app/src/main/res/drawable/ic_select.xml
+++ b/app/src/main/res/drawable/ic_select.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="8">
   <path
       android:pathData="M4,0L20,0A4,4 0,0 1,24 4L24,4A4,4 0,0 1,20 8L4,8A4,4 0,0 1,0 4L0,4A4,4 0,0 1,4 0z"
-      android:fillColor="#475AD7"/>
+      android:fillColor="@color/nuntium_color"/>
 </vector>
