--- a/app/src/main/res/drawable/ic_unselected.xml
+++ b/app/src/main/res/drawable/ic_unselected.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="8">
   <path
       android:pathData="M4,0L4,0A4,4 0,0 1,8 4L8,4A4,4 0,0 1,4 8L4,8A4,4 0,0 1,0 4L0,4A4,4 0,0 1,4 0z"
-      android:fillColor="#F3F4F6"/>
+      android:fillColor="@color/search_card_color"/>
 </vector>
