--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/sf_pro_text"
         android:text="Language"
-        android:textColor="#333647"
+        android:textColor="@color/title_text_color"
         android:textSize="@dimen/_18ssp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@color/white"
         android:id="@+id/back_card"
         android:layout_width="@dimen/_30sdp"
         android:layout_height="@dimen/_30sdp"
@@ -48,7 +49,7 @@
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_20sdp"
-        app:cardBackgroundColor="#F3F4F6"
+        app:cardBackgroundColor="@color/search_card_color"
         android:elevation="0dp"
         android:foreground="?selectableItemBackground"
         app:cardCornerRadius="@dimen/_10sdp"
@@ -66,7 +67,7 @@
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
             android:text="English"
-            android:textColor="#666C8E"
+            android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
 
@@ -87,7 +88,7 @@
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_12sdp"
-        app:cardBackgroundColor="#F3F4F6"
+        app:cardBackgroundColor="@color/search_card_color"
         android:elevation="0dp"
         android:foreground="?selectableItemBackground"
         app:cardCornerRadius="@dimen/_10sdp"
@@ -105,7 +106,7 @@
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
             android:text="Turkish"
-            android:textColor="#666C8E"
+            android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
 
@@ -126,7 +127,7 @@
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_12sdp"
-        app:cardBackgroundColor="#F3F4F6"
+        app:cardBackgroundColor="@color/search_card_color"
         android:elevation="0dp"
         android:foreground="?selectableItemBackground"
         app:cardCornerRadius="@dimen/_10sdp"
@@ -144,7 +145,7 @@
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
             android:text="German"
-            android:textColor="#666C8E"
+            android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
 
@@ -165,7 +166,7 @@
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_12sdp"
-        app:cardBackgroundColor="#F3F4F6"
+        app:cardBackgroundColor="@color/search_card_color"
         android:elevation="0dp"
         android:foreground="?selectableItemBackground"
         app:cardCornerRadius="@dimen/_10sdp"
@@ -183,7 +184,7 @@
             android:layout_marginLeft="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
             android:text="Spanish"
-            android:textColor="#666C8E"
+            android:textColor="@color/card_text_color"
             android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
 
