--- a/app/src/main/res/layout/fragment_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_on_boarding.xml
@@ -70,7 +70,7 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:text="All news in one place, be the"
         android:textAlignment="center"
-        android:textColor="#7C82A1"
+        android:textColor="@color/mini_text_color"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -83,7 +83,7 @@
         android:layout_marginTop="@dimen/_3sdp"
         android:text="first to know last news"
         android:textAlignment="center"
-        android:textColor="#7C82A1"
+        android:textColor="@color/mini_text_color"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -94,7 +94,7 @@
         android:layout_width="@dimen/_280sdp"
         android:layout_height="@dimen/_45sdp"
         android:layout_marginBottom="@dimen/_20sdp"
-        android:backgroundTint="#475AD7"
+        android:backgroundTint="@color/nuntium_color"
         android:elevation="0dp"
         android:foreground="?selectableItemBackground"
         app:cardCornerRadius="@dimen/_10sdp"
