--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:layout_marginTop="@dimen/_20sdp"
-        app:cardBackgroundColor="#F3F4F6"
+        app:cardBackgroundColor="@color/search_card_color"
         android:elevation="0dp"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardElevation="0dp"
@@ -46,8 +46,8 @@
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
             android:text="Light mode"
-            android:textColor="#666C8E"
-            android:textSize="@dimen/_12sdp" />
+            android:textColor="@color/card_text_color"
+            android:textSize="@dimen/_12ssp" />
 
         <Switch
             android:id="@+id/switch_layout"
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:layout_marginTop="@dimen/_12sdp"
-        app:cardBackgroundColor="#F3F4F6"
+        app:cardBackgroundColor="@color/search_card_color"
         android:layout_marginHorizontal="@dimen/_16sdp"
         android:elevation="0dp"
         app:cardCornerRadius="@dimen/_12sdp"
@@ -83,8 +83,8 @@
             android:layout_marginStart="@dimen/_15sdp"
             android:fontFamily="@font/sf_pro_text"
             android:text="Language"
-            android:textColor="#666C8E"
-            android:textSize="@dimen/_12sdp" />
+            android:textColor="@color/card_text_color"
+            android:textSize="@dimen/_12ssp" />
 
         <ImageView
             android:layout_width="wrap_content"
