--- a/app/src/main/res/layout/item_recycler_saved.xml
+++ b/app/src/main/res/layout/item_recycler_saved.xml
@@ -9,7 +9,7 @@
         android:layout_width="96dp"
         android:layout_height="95dp"
         android:layout_marginVertical="12dp"
-        app:cardBackgroundColor="#E5E5E5"
+        app:cardBackgroundColor="@color/saved_card_back_color"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,7 +42,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="UI/UX Design"
-            android:textColor="#7C82A1"
+            android:textColor="@color/mini_text_color"
             android:textSize="14sp" />
 
     </LinearLayout>
@@ -62,7 +62,7 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:text="A Simple Trick For Creating Color Palettes Quickly"
-            android:textColor="#333647"
+            android:textColor="@color/title_text_color"
             android:textSize="16sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
