--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="title_text_color">#333647</color>
+    <color name="mini_text_color">#7C82A1</color>
+    <color name="card_background_color">#EEF0FB</color>
+    <color name="card_text_color">#666C8E</color>
 
+    <color name="search_card_color">#F3F4F6</color>
+    <color name="bottom_nav_color_false">#ACAFC3</color>
+    <color name="saved_card_back_color">#E5E5E5</color>
+    <color name="news_text_color">#605656</color>
 
     <color name="nuntium_color">#475AD7</color>
-    <color name="card_color">#F3F4F6</color>
-    <color name="text_color_in_card">#666C8E</color>
+
+    <color name="splash_color">#FFFFFFFF</color>
 </resources>
