--- a/app/src/main/res/layout/item_view_pager.xml
+++ b/app/src/main/res/layout/item_view_pager.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_16sdp"
         android:layout_marginVertical="@dimen/_10sdp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/news_card_background_color"
         app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_launcher_background" />
+                    android:src="@drawable/news_placeholder" />
             </LinearLayout>
 
             <TextView
@@ -80,7 +80,7 @@
                 android:layout_marginVertical="@dimen/_5sdp"
                 android:layout_marginStart="@dimen/_12sdp"
                 android:text="18:39 / 21.02.2023"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_10ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/news_title" />
