--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -9,39 +9,46 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginRight="@dimen/_16sdp"
         android:fontFamily="@font/sf_pro_text"
         android:text="Categories"
         android:textColor="@color/title_text_color"
         android:textSize="@dimen/_18ssp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/topic_title1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_16sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginRight="@dimen/_16sdp"
-        android:fontFamily="@font/sf_pro_text"
-        android:text="Thousands of articles in each category"
-        android:textColor="@color/mini_text_color"
-        android:textSize="@dimen/_12ssp"
+    <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@color/white"
+        android:id="@+id/back_card"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_16sdp"
+        android:foreground="?selectableItemBackground"
+        app:cardCornerRadius="@dimen/_15sdp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/title"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toTopOf="@id/title">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:id="@+id/left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_left" />
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
+        android:id="@+id/choose_linear"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_400sdp"
         android:layout_marginTop="@dimen/_17sdp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/topic_title1">
+        app:layout_constraintTop_toBottomOf="@id/title">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,7 +64,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -81,7 +88,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -105,7 +112,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -129,7 +136,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -153,7 +160,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -185,7 +192,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -209,7 +216,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -233,7 +240,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -257,7 +264,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -281,7 +288,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:foreground="?selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/news_card_background_color"
                 app:cardCornerRadius="@dimen/_8sdp">
 
                 <TextView
@@ -295,11 +302,39 @@
                     android:textColor="@color/card_text_color"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
-
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
     </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/button_change"
+        android:layout_width="@dimen/_280sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:elevation="0dp"
+        android:foreground="?selectableItemBackground"
+        app:cardBackgroundColor="@color/nuntium_color"
+        app:cardCornerRadius="@dimen/_10sdp"
+        app:cardElevation="0dp"
+        app:cardMaxElevation="0dp"
+        android:layout_marginTop="@dimen/_8sdp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/choose_linear">
+
+        <TextView
+            android:id="@+id/change_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/sf_pro_text"
+            android:gravity="center"
+            android:text="Change"
+            android:textColor="@color/card_background_color"
+            android:textSize="@dimen/_13sdp"
+            android:textStyle="bold" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
