--- a/app/src/main/res/layout/shimmer_home_recycler_layout.xml
+++ b/app/src/main/res/layout/shimmer_home_recycler_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        app:cardBackgroundColor="@color/white"
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,11 +32,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="#B3B3B3" />
+                    android:src="@color/shimmer_card_color" />
             </LinearLayout>
 
             <TextView
-                android:background="#B3B3B3"
+                android:background="@color/shimmer_card_color"
                 android:id="@+id/news_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,7 +72,7 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:background="#B3B3B3"
+                android:background="@color/shimmer_card_color"
                 android:id="@+id/date_text"
                 android:fontFamily="@font/sf_pro_text"
                 android:layout_width="@dimen/_100sdp"
