--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,4 +3,10 @@
 
     <color name="black">#ffffff</color>
     <color name="white">#0E1621</color>
+    <color name="title_text_color">#ffffff</color>
+    <color name="shimmer_card_color">#182533</color>
+    <color name="card_text_color">#ffffff</color>
+    <color name="search_card_color">#242F3D</color>
+
+    <color name="news_card_background_color">#17212B</color>
 </resources>
