--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="news_card_background_color">#FFFFFF</color>
+
     <color name="title_text_color">#333647</color>
     <color name="mini_text_color">#7C82A1</color>
     <color name="card_background_color">#EEF0FB</color>
@@ -11,9 +14,12 @@
     <color name="search_card_color">#F3F4F6</color>
     <color name="bottom_nav_color_false">#ACAFC3</color>
     <color name="saved_card_back_color">#E5E5E5</color>
-    <color name="news_text_color">#605656</color>
+    <color name="news_text_color">#838996</color>
 
     <color name="nuntium_color">#475AD7</color>
 
     <color name="splash_color">#FFFFFFFF</color>
+    <color name="shimmer_card_color">#B3B3B3</color>
+
+    <color name="nuntium_dark_color">#0E1621</color>
 </resources>
